@@ -17,33 +17,33 @@
  */
 package com.dumbster.smtp;
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import javax.mail.MessagingException;
 import javax.mail.Session;
 import javax.mail.Transport;
 import javax.mail.internet.InternetAddress;
 import javax.mail.internet.MimeMessage;
+import java.util.Collection;
 import java.util.Date;
-import java.util.List;
 import java.util.Properties;
 
-import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertThat;
+import static org.junit.jupiter.api.AssertionFailureBuilder.assertionFailure;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 
 public class ServerTest {
 
     private Server server;
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception {
         server = Server.start(Server.AUTO_SMTP_PORT);
     }
 
-    @After
+    @AfterEach
     public void tearDown() {
         server.stop();
     }
@@ -52,77 +52,90 @@ public class ServerTest {
     public void testSend() throws MessagingException {
         sendMessage(server.getPort(), "sender@here.com", "Test", "Test Body", "receiver@there.com");
 
-        List<Message> emails = server.getReceivedEmails();
-        assertThat(emails, hasSize(1));
-        Message email = emails.get(0);
-        assertThat(email.getHeaderValue("Subject"), is("Test"));
-        assertThat(email.getBody(), is("Test Body"));
-        assertThat(email.getHeaderNames(), hasItem("Date"));
-        assertThat(email.getHeaderNames(), hasItem("From"));
-        assertThat(email.getHeaderNames(), hasItem("To"));
-        assertThat(email.getHeaderNames(), hasItem("Subject"));
-        assertThat(email.getHeaderValues("To"), contains("receiver@there.com"));
-        assertThat(email.getHeaderValue("To"), is("receiver@there.com"));
+        var emails = server.getReceivedEmails();
+        assertEquals(1, emails.size());
+        var email = emails.getFirst();
+        assertEquals("Test", email.getHeaderValue("Subject"));
+        assertEquals("Test Body", email.getBody());
+        assertContains("Date", email.getHeaderNames());
+        assertContains("From", email.getHeaderNames());
+        assertContains("To", email.getHeaderNames());
+        assertContains("Subject", email.getHeaderNames());
+        assertContains("receiver@there.com", email.getHeaderValues("To"));
+        assertEquals("receiver@there.com", email.getHeaderValue("To"));
+    }
+
+    public static void assertContains(Object expected, Collection<? extends Object> actual) {
+        if (actual.contains(expected)) return;
+        assertionFailure() //
+                .message("%s is not contained in %s".formatted(expected, actual)) //
+                .expected(expected) //
+                .actual(actual) //
+                .buildAndThrow();
     }
 
     @Test
     public void testSendAndReset() throws MessagingException {
         sendMessage(server.getPort(), "sender@here.com", "Test", "Test Body", "receiver@there.com");
-        assertThat(server.getReceivedEmails(), hasSize(1));
+        assertEquals(1, server.getReceivedEmails().size());
 
         server.reset();
-        assertThat(server.getReceivedEmails(), hasSize(0));
+        assertEquals(0, server.getReceivedEmails().size());
 
         sendMessage(server.getPort(), "sender@here.com", "Test", "Test Body", "receiver@there.com");
-        assertThat(server.getReceivedEmails(), hasSize(1));
+        assertEquals(1, server.getReceivedEmails().size());
     }
 
     @Test
     public void testSendMessageWithCR() throws MessagingException {
-        String bodyWithCR = "\n\nKeep these pesky carriage returns\n\n";
+        var bodyWithCR = """
+                
+                
+                Keep these pesky carriage returns
+                
+                
+                """;
         sendMessage(server.getPort(), "sender@hereagain.com", "CRTest", bodyWithCR, "receivingagain@there.com");
 
-        List<Message> emails = server.getReceivedEmails();
-        assertThat(emails, hasSize(1));
-        Message email = emails.get(0);
+        var emails = server.getReceivedEmails();
+        assertEquals(1, emails.size());
+        var email = emails.getFirst();
         assertEquals(bodyWithCR, email.getBody());
     }
 
     @Test
     public void testSendTwoMessagesSameConnection() throws MessagingException {
-        MimeMessage[] mimeMessages = new MimeMessage[2];
-        Properties mailProps = getMailProperties(server.getPort());
-        Session session = Session.getInstance(mailProps, null);
+        var mimeMessages = new MimeMessage[2];
+        var mailProps = getMailProperties(server.getPort());
+        var session = Session.getInstance(mailProps, null);
 
         mimeMessages[0] = createMessage(session, "sender@whatever.com", "receiver@home.com", "Doodle1", "Bug1");
         mimeMessages[1] = createMessage(session, "sender@whatever.com", "receiver@home.com", "Doodle2", "Bug2");
 
-        Transport transport = session.getTransport("smtp");
+        var transport = session.getTransport("smtp");
         transport.connect("localhost", server.getPort(), null, null);
 
-        for (MimeMessage mimeMessage : mimeMessages) {
-            transport.sendMessage(mimeMessage, mimeMessage.getAllRecipients());
-        }
+        for (MimeMessage mimeMessage : mimeMessages) transport.sendMessage(mimeMessage, mimeMessage.getAllRecipients());
 
         transport.close();
 
-        assertThat(server.getReceivedEmails(), hasSize(2));
+        assertEquals(2, server.getReceivedEmails().size());
     }
 
     @Test
     public void testSendTwoMsgsWithLogin() throws Exception {
-        String serverHost = "localhost";
-        String from = "sender@here.com";
-        String to = "receiver@there.com";
-        String subject = "Test";
-        String body = "Test Body";
+        var serverHost = "localhost";
+        var from = "sender@here.com";
+        var to = "receiver@there.com";
+        var subject = "Test";
+        var body = "Test Body";
 
-        Properties props = System.getProperties();
+        var props = System.getProperties();
 
         props.setProperty("mail.smtp.host", serverHost);
 
-        Session session = Session.getDefaultInstance(props, null);
-        javax.mail.Message msg = new MimeMessage(session);
+        var session = Session.getDefaultInstance(props, null);
+        var msg = new MimeMessage(session);
 
         msg.setFrom(new InternetAddress(from));
 
@@ -148,15 +161,15 @@ public class ServerTest {
             }
         }
 
-        List<Message> emails = this.server.getReceivedEmails();
-        assertThat(emails, hasSize(2));
-        Message email = emails.get(0);
+        var emails = this.server.getReceivedEmails();
+        assertEquals(2, emails.size());
+        var email = emails.getFirst();
         assertEquals("Test", email.getHeaderValue("Subject"));
         assertEquals("Test Body", email.getBody());
     }
 
     private Properties getMailProperties(int port) {
-        Properties mailProps = new Properties();
+        var mailProps = new Properties();
         mailProps.setProperty("mail.smtp.host", "localhost");
         mailProps.setProperty("mail.smtp.port", "" + port);
         mailProps.setProperty("mail.smtp.sendpartial", "true");
@@ -165,17 +178,17 @@ public class ServerTest {
 
 
     private void sendMessage(int port, String from, String subject, String body, String to) throws MessagingException {
-        Properties mailProps = getMailProperties(port);
-        Session session = Session.getInstance(mailProps, null);
+        var mailProps = getMailProperties(port);
+        var session = Session.getInstance(mailProps, null);
         //session.setDebug(true);
 
-        MimeMessage msg = createMessage(session, from, to, subject, body);
+        var msg = createMessage(session, from, to, subject, body);
         Transport.send(msg);
     }
 
     private MimeMessage createMessage(
             Session session, String from, String to, String subject, String body) throws MessagingException {
-        MimeMessage msg = new MimeMessage(session);
+        var msg = new MimeMessage(session);
         msg.setFrom(new InternetAddress(from));
         msg.setSubject(subject);
         msg.setSentDate(new Date());
